--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -41,18 +41,32 @@
 .hero-container .image__title {
   color: #fff;
 }
-
-.hero-container .logo-div {
-  background: linear-gradient(to top, #f0fff8, #e0f9e0);
+.logo-div {
+  background: linear-gradient(to bottom, #ccc, #ddd);
   width: 100vw;
   display: flex;
-  justify-content: center;
   overflow: hidden;
+  position: relative;
 }
 
-.hero-container .logo-div img {
-  scale: 2.5;
-  translate: 0 -8px;
-  height: 50px;
-  width: 50px;
+.logo-div img {
+  scale: 2.8;
+  translate: 40px -7px;
+  height: 52px;
+  width: 52px;
+}
+
+.logo-div::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: repeating-linear-gradient(
+    -45deg,
+    #f0f0f0,
+    #f0f0f0 5px,
+    #e0e0e0 5px,
+    #e0e0e0 10px
+  );
+  opacity: 0.15;
 }
